--- a/scratch.html
+++ b/scratch.html
@@ -3,7 +3,7 @@
     <head>
         <title> Layout Template
         </title>
-        <link rel="stylesheet" href="../FINAL IS Alyssa Fellows/css/scratch.css">
+        <link rel="stylesheet" href="../../../FINAL IS Alyssa Fellows/css/scratch.css">
     </head>
     <body>
     </head>
