--- a/scratch.html
+++ b/scratch.html
@@ -142,7 +142,7 @@
 </div>
         <div class="common rightmenu"> <h3> Here is my favorite cookie recipe! </h3> 
            
-           <h4> <a class="normal noborder" href="https://www.brownedbutterblondie.com/best-chocolate-chip-cookie-recipe/"><img src="../FINAL IS Alyssa Fellows/assets/img/singlecookie.jpg" alt="Here is my favorite cookie recipe!" width="75%"></a></h4>
+           <h4> <a class="normal noborder" href="https://www.brownedbutterblondie.com/best-chocolate-chip-cookie-recipe/"><img src="../../../../FINAL IS Alyssa Fellows/assets/img/singlecookie.jpg" alt="Here is my favorite cookie recipe!" width="75%"></a></h4>
             <h23><a class="normal noborder click"></a>Click the photo!</h23>
         </div>
         <p id="anchor biscuittwo"> DIRECTIONS</p>
