--- a/resume.html
+++ b/resume.html
@@ -11,28 +11,29 @@
     
     <body>
         <div class="common header"> <h1>Alyssa Fellows</h1>
-            <h5>Super Cool</h5></div>
-        <div class="common leftmenu"> Professional Cookie Maker
-            Logan Utah 234364
-            Cookies. </div>
+            <h5>Entrepreneur</h5></div>
+        <div class="common leftmenu">
+            Logan Utah </div>
         <div class="common mainbody"><ol>
             <li class="bold"> Education </li>
             <ul>
-                <li> BYU </li>
-                <li> that's it. </li>
+                <li> Green Canyon High School </li>
+                <li> Brigham Young University </li>
                 </ul>
                 <li class="bold"> Skills </li>
             <ul>
-                <li> jokes </li>
-                <li> cooking </li>
-                <li> ziplining </li>
+                <li> Organized </li>
+                <li> Efficient </li>
+                <li> Adaptable </li>
             </ul>
             <li class="bold"> Experience </li>
             <ul>
-                <li> cookies. </li>
+                <li> BYU Broadcasting</li>
+                <li> Nekter Juice Bar </li>
+                <li> Zipline Utah </li>
             </ul>
            </ol></div>
-        <div class="common rightmenu"><p>J'adore les crepes et le ciel. </p></div>
+        <div class="common rightmenu"><p> Awards: Hope of America Award, Utah State History Fair, GCHS Top Scholar, We The People State Champions </p></div>
            
         <div class="common footer">www.mywebsitename.com &copy; Alyssa</div>
     </body>
